@@ -61,6 +61,7 @@ void DialogSettings::loadSettings(const Settings &settings)
 
     ui->cbLastPath->setChecked(settings.restoreLastPathOnStartup);
     ui->cbInstantSaving->setChecked(settings.instantSaving);
+    ui->cbShowUpdNumInMenu->setChecked(settings.showUpdNumInMenu);
 
     // Tab Database
     if (settings.dbPrefix == defaults.dbPrefix)
@@ -95,6 +96,7 @@ void DialogSettings::updateSettings()
 
     settings_->restoreLastPathOnStartup = ui->cbLastPath->isChecked();
     settings_->instantSaving = ui->cbInstantSaving->isChecked();
+    settings_->showUpdNumInMenu = ui->cbShowUpdNumInMenu->isChecked();
 
     // database
     settings_->dbPrefix = ui->inputJsonFileNamePrefix->text().isEmpty() ? defaults.dbPrefix
