@@ -8,6 +8,7 @@ Internal changes:
 * The architecture has been optimized and improved.
 
 Fixes and Minor Enhancements:
+* Added display of the number of files being updated to the "Update the "Database" menu. (Can be disabled in Settings).
 * Some items of the database header have been changed.
 * The database now stores the date and time it was created as a separate value.
 * The speed display is brought to the standard form: MiB/sec >> MiB/s
